[package]
name = "oxyflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
mac_address = { version = "1.1.5", features = ["serde"] }
opentelemetry = { version = "0.21.0", features = ["metrics"] }
pcap = "1.1.0"
pnet = { version = "0.34.0", features = ["pcap"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
warp = "0.3.6"
